# mini-mcp

./: .gitignore  README.md  main.py  pyproject.toml  run.sh
app/: .chat_app_messages.sqlite  chat_app.html  chat_app.py  chat_app.ts
client/: .chat_app_messages.sqlite  chat_app.py  pyproject.toml  run.sh
server/: main.py  pyproject.toml  run.sh
