[project]
name = "mini-mcp-server"
version = "0.1.0"
description = "Mini MCP implementation within pydantic-ai"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pydantic-ai-slim[mcp]>=0.4.9",
    "logfire>=4.0.0",
    "fastapi[standard]>=0.115.14",
    "python-dotenv>=1.0.1",
    "fastmcp>=2.10.6",
]

[tool.uv.workspace]
members = ["server"]
